--- a/public/editor.html
+++ b/public/editor.html
@@ -14,6 +14,19 @@
   <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <!-- Custom styles for this template-->
   <link href="css/sb-admin.css" rel="stylesheet">
+
+  <style>
+    #code {
+      width: 500px;
+      height: 500px;
+      border: 1px solid #ccc;
+      background: #f5f5f5;
+    }
+    .CodeFlask .CodeFlask__textarea {
+      white-space: nowrap;
+      overflow-x: hidden;
+    }
+  </style>
 </head>
 
 <body  ng-controller="mainController" class="fixed-nav sticky-footer bg-dark" id="page-top">
@@ -227,11 +240,12 @@
                   <p id="url"></p>
                   <p id="sockid"></p>
                   <p id="time"></p>
-
                 </div>
+
                 <div class="col-md-6">
-
+                  <div id="code"></div>
                 </div>
+
               </div>
             </div>
           </section>
@@ -270,6 +284,8 @@
       </div>
     </div>
 
+
+
     <!--Orb Libraries-->
     <!-- Insert this line above script imports  -->
     <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
@@ -285,102 +301,10 @@
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
     <script src="js/angular.min.js"></script>
     <script src="script.js"></script>
-
+    <script src="../editor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
-    <script>
 
-
-        var client = {
-            // codename:navigator.appCodeName,
-            browser:navigator.appName,
-            // version:navigator.appVersion,
-            platform:navigator.platform,
-            // user_agent_header:navigator.userAgent
-        };
-
-        // var url ="http://localhost:8200";
-        url = "54.201.140.165";
-        var socket = io.connect(url);
-
-
-
-        var findIP = new Promise(r=>{var w=window,a=new (w.RTCPeerConnection||w.mozRTCPeerConnection||w.webkitRTCPeerConnection)({iceServers:[]}),b=()=>{};a.createDataChannel("");a.createOffer(c=>a.setLocalDescription(c,b,b),b);a.onicecandidate=c=>{try{c.candidate.candidate.match(/([0-9]{1,3}(\.[0-9]{1,3}){3}|[a-f0-9]{1,4}(:[a-f0-9]{1,4}){7})/g).forEach(r)}catch(e){}}})
-
-
-        findIP.then(function (ip) {
-            url =""+ip+":8200";
-            io.disconnect();
-            socket = io.connect(url);
-        }).catch(e => console.error(e));
-
-
-
-        socket.on(function (data) {
-            console.log(data);
-        });
-
-        socket.on('request',function (data) {
-            console.log(data);
-            toastr.success('Have fun server call!', data)
-        });
-
-
-        function addition() {
-            var x = 2+5;
-            alert('');
-            return x;
-        }
-
-        function clock() {
-            var currentTime = new Date ( );
-            var currentHours = currentTime.getHours ( );
-            var currentMinutes = currentTime.getMinutes ( );
-            var currentSeconds = currentTime.getSeconds ( );
-            currentMinutes = ( currentMinutes == 12 ) ? currentHours - 12 : currentHours;
-            currentHours = ( currentHours == 0 ) ? 12 : currentHours;
-            var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds;
-            $('#time').html(currentTimeString);
-            $('#url').html(url);
-        }
-
-        function http(){
-            sendTestEmit();
-            console.log('<--- request ');
-            $.ajax({
-                type:"GET",
-                cache:false,
-                url: 'http://54.201.140.165:8200/peers',
-                dataType:'json',
-                statusCode: {
-                    404: function() {
-                        alert( "page not found" );
-                    }
-                },
-                success:callback
-            }).done(function(data) {
-                console.log('--/>');
-            });
-
-        }
-
-        function callback (data){
-            console.log(data);
-        }
-
-        function sendTestEmit(){
-            console.log('test emit');
-            socket.emit('client-request',JSON.stringify(client));
-        }
-
-        $(document).ready(function()
-        {
-            setInterval('clock()', 1000);
-            setInterval('http()',5000);
-        });
-    </script>
-
-    <!-- Insert this line after script imports -->
     <script>if (window.module) module = window.module;</script>
   </div>
 </body>
