--- a/public/editor.html
+++ b/public/editor.html
@@ -18,12 +18,13 @@
   <style>
     #code {
       /*max-width: calc(70% - ??px);*/
+      /*max-width: calc(70% - ??px);*/
       margin: 20px;
       width: 75vw;
       height: 55vh;
       overflow-x: hidden;
       border: 1px solid #ccc;
-      background: #3e3e3e;
+      background: #ffffff;
       word-wrap: break-word;
         display: inline-flex;
     }
@@ -263,6 +264,7 @@
     <footer class="sticky-footer">
       <div class="container">
         <div class="text-center">
+          <button class="btn btn-sm btn-danger" id="send">send</button>
           <small>Copyright © Your Website 2018</small>
         </div>
       </div>
@@ -308,6 +310,10 @@
     <script src="../editor.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+
+  <script>
+
+  </script>
 
     <script>if (window.module) module = window.module;</script>
   </div>
