--- a/public/editor.html
+++ b/public/editor.html
@@ -252,7 +252,7 @@
         <div class="col-md-12" id="code"></div>
         <div class="col-md-4">
           <button style="margin: 10px" class="btn btn-success"><i class="fa fa-save"></i> Done Editing</button>
-          <button style="margin: 10px" class="btn btn-danger"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
+          <button style="margin: 10px" class="btn btn-danger" id="obfuscate"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
         </div>
       </div>
     </div>
