--- a/public/editor.html
+++ b/public/editor.html
@@ -67,13 +67,10 @@
         </a>
         <ul class="sidenav-second-level collapse" id="collapseComponents">
           <li>
-            <a href="navbar.html">Hosted Functions</a>
+            <a href="deployed.html">Available Functions</a>
           </li>
           <li>
-            <a href="cards.html">Seeding Functions</a>
-          </li>
-          <li>
-            <a href="cards.html">Inline Code Editor</a>
+            <a href="editor.html">Inline Code Editor</a>
           </li>
         </ul>
       </li>
@@ -84,17 +81,17 @@
         </a>
         <ul class="sidenav-second-level collapse" id="collapseExamplePages">
           <li>
-            <a href="login.html">Paid</a>
+            <a href="orbwallet.html">Payments</a>
           </li>
           <li>
-            <a href="register.html">Received</a>
+            <a href="wallet_dashboard.html">Wallet Dashboard</a>
           </li>
-          <li>
-            <a href="forgot-password.html">Rewards</a>
-          </li>
-          <li>
-            <a href="orb.html">Payment History</a>
-          </li>
+          <!--<li>-->
+            <!--<a href="forgot-password.html">Rewards</a>-->
+          <!--</li>-->
+          <!--<li>-->
+            <!--<a href="orb.html">Payment History</a>-->
+          <!--</li>-->
         </ul>
       </li>
       <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
@@ -105,12 +102,6 @@
         <ul class="sidenav-second-level collapse" id="collapseMulti">
           <li>
             <a href="#">How to get initial coins?</a>
-          </li>
-          <li>
-            <a href="#">Second Level Item</a>
-          </li>
-          <li>
-            <a href="#">Second Level Item</a>
           </li>
           <li>
             <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2">Third Level</a>
@@ -234,7 +225,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i class="fa fa-fw fa-sign-out"></i>Logout</a>
+          <i href="login.html" class="fa fa-fw fa-sign-out"></i>Logout</a>
       </li>
     </ul>
   </div>
@@ -257,7 +248,7 @@
           <button style="margin: 10px" class="btn btn-danger" id="obfuscate"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
           <button style="margin: 10px" class="btn btn-danger" id="runcode"><i class="fa fa-send"></i> Run</button>
           <button style="margin: 10px" class="btn btn-primary" id="deploy"><i class="fa fa-send"></i> Deploy</button>
-          <button style="margin: 10px" class="btn btn-primary" id="test"><i class="fa fa-send"></i> Test</button>
+          <!--<button style="margin: 10px" class="btn btn-primary" id="test"><i class="fa fa-send"></i> Test</button>-->
         </div>
       </div>
     </div>
@@ -317,20 +308,20 @@
 
 <script>
     // let superUrl = "http://192.168.1.4:8200";
-    let superUrl = "http://192.168.1.4:8200";
-
-    let localUrl = "";
-    console.log(superUrl);
-    let socket = io.connect(superUrl);
-
-    socket.on('request',function (data) {
-        // console.log(data+'call');
-        // toast.success('Have fun server call!', data)
-    });
+    // let superUrl = "http://192.168.1.4:8200";
+    //
+    // let localUrl = "";
+    // console.log(superUrl);
+    // let socket = io.connect(superUrl);
+    //
+    // socket.on('request',function (data) {
+    //     // console.log(data+'call');
+    //     // toast.success('Have fun server call!', data)
+    // });
 
     // var appInfo = clientInfo();
     // console.log(appInfo);
-    var table = $('#table');
+    // var table = $('#table');
 
     // getClientIp().then(function (ip) {
     //     localUrl = "";
@@ -341,106 +332,104 @@
     //     },5000)
     // }).catch(e => console.error(e));
 
-
-    $(document).ready(function()
-    {
-        setInterval('clock()', 1000);
-        setInterval('http()',5000);
-    });
-
-
-
-    function clock() {
-        var currentTime = new Date ();
-        var currentHours = currentTime.getHours ( );
-        var currentMinutes = currentTime.getMinutes ( );
-        var currentSeconds = currentTime.getSeconds ( );
-        var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds;
-        $('#time').html("Server Time : " + currentTimeString);
-        $('#url').html("Local IP : "+localUrl+"<br/> Super Node Public IP : "+superUrl);
-    }
-
-
-
-    function http()
-    {
-        // sendTestEmit();
-        $('#refresh').html('Refreshing.....');
-        console.log('Request Peer Route '+superUrl);
-        let peer_uri = superUrl+"/peers";
-        console.log('request to '+peer_uri);
-        $.ajax({
-            type:"GET",
-            cache:false,
-            url: peer_uri,
-            dataType:'json',
-            statusCode: {
-                404: function() {
-                    alert( "page not found" );
-                }
-            },
-            success:callback
-        }).done(function(data) {
-            console.log('--/>');
-        });
-    }
-
-    function callback (data)
-    {
-        $('#progressB').hide();
-
-        console.log(data);
-        table.empty();
-        for(i=0;i<data.length;i++){
-            id =data[i]["id"];
-            var tem = '<button class="btn btn-sm btn-outline-success" onclick="sendRequest(\'' + id + '\')">sample message</button>';
-            table.append('<tr scope="row"><th>'+i+'</th><th><input value="'+data[i]["id"]+'"></th><th>'+tem+'</th></tr>');
-            console.log(data[i])
-        }
-        $('#refresh').html('Available Peer List');
-    }
-
-    function sendTestEmit()
-    {
-        console.log('test emit');
-        socket.emit('client-request',JSON.stringify(client));
-    }
-
-    function sendRequest(val) {
-        console.log("Send Request to ");
-        AjaxToFunc(val);
-    }
-
-
-    function AjaxToFunc(val) {
-        let request_uri = superUrl+'/request';
-        console.log(request_uri);
-        $.ajax({
-            type:"POST",
-            cache:false,
-            url: request_uri,
-            dataType:'json',
-            data:{
-                id:val,
-                msg:'test'
-            },
-            statusCode: {
-                404: function() {
-                    alert( "page not found" );
-                }
-            },
-            success:function(msg){
-                console.log(msg);
-            }
-        }).done(function(data) {
-            console.log("request end");
-        });
-    }
+    //
+    // $(document).ready(function()
+    // {
+    //     setInterval('clock()', 1000);
+    //     setInterval('http()',5000);
+    // });
+    //
+    //
+    //
+    // function clock() {
+    //     var currentTime = new Date ();
+    //     var currentHours = currentTime.getHours ( );
+    //     var currentMinutes = currentTime.getMinutes ( );
+    //     var currentSeconds = currentTime.getSeconds ( );
+    //     var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds;
+    //     $('#time').html("Server Time : " + currentTimeString);
+    //     $('#url').html("Local IP : "+localUrl+"<br/> Super Node Public IP : "+superUrl);
+    // }
+    //
+    //
+    //
+    // function http()
+    // {
+    //     // sendTestEmit();
+    //     $('#refresh').html('Refreshing.....');
+    //     console.log('Request Peer Route '+superUrl);
+    //     let peer_uri = superUrl+"/peers";
+    //     console.log('request to '+peer_uri);
+    //     $.ajax({
+    //         type:"GET",
+    //         cache:false,
+    //         url: peer_uri,
+    //         dataType:'json',
+    //         statusCode: {
+    //             404: function() {
+    //                 alert( "page not found" );
+    //             }
+    //         },
+    //         success:callback
+    //     }).done(function(data) {
+    //         console.log('--/>');
+    //     });
+    // }
+    //
+    // function callback (data)
+    // {
+    //     $('#progressB').hide();
+    //
+    //     console.log(data);
+    //     table.empty();
+    //     for(i=0;i<data.length;i++){
+    //         id =data[i]["id"];
+    //         var tem = '<button class="btn btn-sm btn-outline-success" onclick="sendRequest(\'' + id + '\')">sample message</button>';
+    //         table.append('<tr scope="row"><th>'+i+'</th><th><input value="'+data[i]["id"]+'"></th><th>'+tem+'</th></tr>');
+    //         console.log(data[i])
+    //     }
+    //     $('#refresh').html('Available Peer List');
+    // }
+    //
+    // function sendTestEmit()
+    // {
+    //     console.log('test emit');
+    //     socket.emit('client-request',JSON.stringify(client));
+    // }
+    //
+    // function sendRequest(val) {
+    //     console.log("Send Request to ");
+    //     AjaxToFunc(val);
+    // }
+    //
+    //
+    // function AjaxToFunc(val) {
+    //     let request_uri = superUrl+'/request';
+    //     console.log(request_uri);
+    //     $.ajax({
+    //         type:"POST",
+    //         cache:false,
+    //         url: request_uri,
+    //         dataType:'json',
+    //         data:{
+    //             id:val,
+    //             msg:'test'
+    //         },
+    //         statusCode: {
+    //             404: function() {
+    //                 alert( "page not found" );
+    //             }
+    //         },
+    //         success:function(msg){
+    //             console.log(msg);
+    //         }
+    //     }).done(function(data) {
+    //         console.log("request end");
+    //     });
+    // }
 
 
 </script>
-
-
 
 <script>if (window.module) module = window.module;</script>
 </div>
