--- a/public/orbwallet.html
+++ b/public/orbwallet.html
@@ -243,7 +243,7 @@
       <div class="card-header">
         <i class="fa fa-table"></i> Orb Wallet</div>
       <div class="card-body">
-        <!--<button id="check" href="editor.html" class="btn btn-danger rounded">Add Function</button> <br/><br/>-->
+        <button id="sd" href="editor.html" class="btn btn-danger rounded">Check Complexity</button> <br/><br/>
         <div class="table-responsive">
           <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead id="table">
@@ -309,8 +309,9 @@
   <!-- Custom scripts for this page-->
   <script src="js/sb-admin-datatables.min.js"></script>
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+  <script src="js/swal.js"></script>
   <script src="js/wallet.js"></script>
+  <script>if (window.module) module = window.module;</script>
 </div>
 </body>
 
