--- a/public/wallet_dashboard.html
+++ b/public/wallet_dashboard.html
@@ -12,7 +12,7 @@
     <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Custom fonts for this template-->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <!-- Custom styles for this template-->
+    <!-- Custom styles for this tempchecklate-->
     <link href="css/sb-admin.css" rel="stylesheet">
     <link href="../public/css/toaster.css" rel="stylesheet">
 
