--- a/public/editor.html
+++ b/public/editor.html
@@ -1,24 +1,5 @@
-<!DOCTYPE html>
-<!--<html ng-app="scotchApp" lang="en">-->
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <title>The Orb</title>
-  <!-- Bootstrap core CSS-->
-  <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-  <!-- Custom fonts for this template-->
-  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <!-- Custom styles for this template-->
-  <link href="css/sb-admin.css" rel="stylesheet">
-  <link href="../public/css/toaster.css" rel="stylesheet">
-
-
-  <style>
+ <!--If you have special style-->
+<style>
     #code {
       /*max-width: calc(70% - ??px);*/
       /*max-width: calc(70% - ??px);*/
@@ -42,396 +23,41 @@
     .codeflask__flatten {
       white-space: normal;
     }
-  </style>
-</head>
 
-<body  ng-controller="mainController" class="fixed-nav sticky-footer bg-dark" id="page-top">
-<!-- Navigation-->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-  <a class="navbar-brand" href="index.html">The Orb</a>
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarResponsive">
-    <ul class="navbar-nav navbar-sidenav" id="exampleAccordion">
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
-        <a class="nav-link" href="#about">
-          <i class="fa fa-fw fa-dashboard"></i>
-          <span class="nav-link-text">Dashboard</span>
-        </a>
-      </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
-        <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
-          <i class="fa fa-fw fa-wrench"></i>
-          <span class="nav-link-text">My Functions</span>
-        </a>
-        <ul class="sidenav-second-level collapse" id="collapseComponents">
-          <li>
-            <a href="deployed.html">Available Functions</a>
-          </li>
-          <li>
-            <a href="editor.html">Inline Code Editor</a>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
-        <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
-          <i class="fa fa-fw fa-file"></i>
-          <span class="nav-link-text">My Wallet</span>
-        </a>
-        <ul class="sidenav-second-level collapse" id="collapseExamplePages">
-          <li>
-            <a href="orbwallet.html">Payments</a>
-          </li>
-          <li>
-            <a href="wallet_dashboard.html">Wallet Dashboard</a>
-          </li>
-          <!--<li>-->
-            <!--<a href="forgot-password.html">Rewards</a>-->
-          <!--</li>-->
-          <!--<li>-->
-            <!--<a href="orb.html">Payment History</a>-->
-          <!--</li>-->
-        </ul>
-      </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Menu Levels">
-        <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti" data-parent="#exampleAccordion">
-          <i class="fa fa-fw fa-sitemap"></i>
-          <span class="nav-link-text">FAQ</span>
-        </a>
-        <ul class="sidenav-second-level collapse" id="collapseMulti">
-          <li>
-            <a href="#">How to get initial coins?</a>
-          </li>
-          <li>
-            <a class="nav-link-collapse collapsed" data-toggle="collapse" href="#collapseMulti2">Third Level</a>
-            <ul class="sidenav-third-level collapse" id="collapseMulti2">
-              <li>
-                <a href="#">Third Level Item</a>
-              </li>
-              <li>
-                <a href="#">Third Level Item</a>
-              </li>
-              <li>
-                <a href="#">Third Level Item</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-      </li>
-      <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Link">
-        <a class="nav-link" href="#">
-          <i class="fa fa-fw fa-link"></i>
-          <span class="nav-link-text">My Storage</span>
-        </a>
-      </li>
-    </ul>
-    <ul class="navbar-nav sidenav-toggler">
-      <li class="nav-item">
-        <a class="nav-link text-center" id="sidenavToggler">
-          <i class="fa fa-fw fa-angle-left"></i>
-        </a>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle mr-lg-2" id="messagesDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-fw fa-envelope"></i>
-          <span class="d-lg-none">Messages
-              <span class="badge badge-pill badge-primary">12 New</span>
-            </span>
-          <span class="indicator text-primary d-none d-lg-block">
-              <i class="fa fa-fw fa-circle"></i>
-            </span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="messagesDropdown">
-          <h6 class="dropdown-header">New Messages:</h6>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-            <strong>David Miller</strong>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">Hey there! This new version of SB Admin is pretty awesome! These messages clip off when they reach the end of the box so they don't overflow over to the sides!</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-            <strong>Jane Smith</strong>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">I was wondering if you could meet for an appointment at 3:00 instead of 4:00. Thanks!</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-            <strong>John Doe</strong>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">I've sent the final files over to you for review. When you're able to sign off of them let me know and we can discuss distribution.</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item small" href="#">View all messages</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          <i class="fa fa-fw fa-bell"></i>
-          <span class="d-lg-none">Alerts
-              <span class="badge badge-pill badge-warning">6 New</span>
-            </span>
-          <span class="indicator text-warning d-none d-lg-block">
-              <i class="fa fa-fw fa-circle"></i>
-            </span>
-        </a>
-        <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-          <h6 class="dropdown-header">New Alerts:</h6>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-              <span class="text-success">
-                <strong>
-                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
-              </span>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-              <span class="text-danger">
-                <strong>
-                  <i class="fa fa-long-arrow-down fa-fw"></i>Status Update</strong>
-              </span>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">
-              <span class="text-success">
-                <strong>
-                  <i class="fa fa-long-arrow-up fa-fw"></i>Status Update</strong>
-              </span>
-            <span class="small float-right text-muted">11:21 AM</span>
-            <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
-          </a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item small" href="#">View all alerts</a>
-        </div>
-      </li>
-      <li class="nav-item">
-        <form class="form-inline my-2 my-lg-0 mr-lg-2">
-          <div class="input-group">
-            <input class="form-control" type="text" placeholder="Search for...">
-            <span class="input-group-append">
-                <button class="btn btn-primary" type="button">
-                  <i class="fa fa-search"></i>
-                </button>
-              </span>
-          </div>
-        </form>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" data-toggle="modal" data-target="#exampleModal">
-          <i href="login.html" class="fa fa-fw fa-sign-out"></i>Logout</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-<div class="content-wrapper">
-  <div class="container-fluid">
+  </style>
+
+
+ <!--Include container-fluid here-->
+ <div class="container-fluid">
+
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
-        <a href="index.html">Dashboard</a>
+        <a href="dashboard.html">Dashboard</a>
       </li>
       <li class="breadcrumb-item active">Inline Code Editor</li>
     </ol>
+
+
     <div class="row">
       <div id="main" class="col-12">
-        <!--<div ng-view></div>-->
         <div class="col-md-12" id="code"></div>
         <div class="col-md-8">
           <button style="margin: 10px" class="btn btn-success" id="save" onclick=""><i class="fa fa-save"></i> Done Editing</button>
           <button style="margin: 10px" class="btn btn-danger" id="obfuscate"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
           <button style="margin: 10px" class="btn btn-danger" id="runcode"><i class="fa fa-send"></i> Run</button>
           <button style="margin: 10px" class="btn btn-primary" id="deploy"><i class="fa fa-send"></i> Deploy</button>
-          <!--<button style="margin: 10px" class="btn btn-primary" id="test"><i class="fa fa-send"></i> Test</button>-->
         </div>
       </div>
     </div>
-    </section>
-  </div>
-</div>
-</div>
-<!-- /.container-fluid-->
-<!-- /.content-wrapper-->
-<footer class="sticky-footer">
-  <div class="container">
-    <div class="text-center">
-      <button class="btn btn-sm btn-danger" id="send">send</button>
-      <small>Copyright © Your Website 2018</small>
-    </div>
-  </div>
-</footer>
-<!-- Scroll to Top Button-->
-<a class="scroll-to-top rounded" href="#page-top">
-  <i class="fa fa-angle-up"></i>
-</a>
-<!-- Logout Modal-->
-<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Ready to Leave?</h5>
-        <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
-      <div class="modal-footer">
-        <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<!--Orb Libraries-->
-<!-- Insert this line above script imports  -->
-<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
-
-<!-- Bootstrap core JavaScript-->
-<script src="vendor/jquery/jquery.min.js"></script>
-<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-<!-- Core plugin JavaScript-->
-<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-<!-- Custom scripts for all pages-->
-<script src="js/sb-admin.min.js"></script>
-<script src="js/angular.min.js"></script>
-<script src="js/editor.js"></script>
-<!--<script src="js/store.js"></script>-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.4/socket.io.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
 
-<script>
-    // let superUrl = "http://192.168.1.4:8200";
-    // let superUrl = "http://192.168.1.4:8200";
-    //
-    // let localUrl = "";
-    // console.log(superUrl);
-    // let socket = io.connect(superUrl);
-    //
-    // socket.on('request',function (data) {
-    //     // console.log(data+'call');
-    //     // toast.success('Have fun server call!', data)
-    // });
-
-    // var appInfo = clientInfo();
-    // console.log(appInfo);
-    // var table = $('#table');
-
-    // getClientIp().then(function (ip) {
-    //     localUrl = "";
-    //     localUrl =ip+":8200";
-    //     console.log("Client Url [ local test] <"+localUrl+">")
-    //     setTimeout(function () {
-    //         // socket = io.connect(localUrl);
-    //     },5000)
-    // }).catch(e => console.error(e));
-
-    //
-    // $(document).ready(function()
-    // {
-    //     setInterval('clock()', 1000);
-    //     setInterval('http()',5000);
-    // });
-    //
-    //
-    //
-    // function clock() {
-    //     var currentTime = new Date ();
-    //     var currentHours = currentTime.getHours ( );
-    //     var currentMinutes = currentTime.getMinutes ( );
-    //     var currentSeconds = currentTime.getSeconds ( );
-    //     var currentTimeString = currentHours + ":" + currentMinutes + ":" + currentSeconds;
-    //     $('#time').html("Server Time : " + currentTimeString);
-    //     $('#url').html("Local IP : "+localUrl+"<br/> Super Node Public IP : "+superUrl);
-    // }
-    //
-    //
-    //
-    // function http()
-    // {
-    //     // sendTestEmit();
-    //     $('#refresh').html('Refreshing.....');
-    //     console.log('Request Peer Route '+superUrl);
-    //     let peer_uri = superUrl+"/peers";
-    //     console.log('request to '+peer_uri);
-    //     $.ajax({
-    //         type:"GET",
-    //         cache:false,
-    //         url: peer_uri,
-    //         dataType:'json',
-    //         statusCode: {
-    //             404: function() {
-    //                 alert( "page not found" );
-    //             }
-    //         },
-    //         success:callback
-    //     }).done(function(data) {
-    //         console.log('--/>');
-    //     });
-    // }
-    //
-    // function callback (data)
-    // {
-    //     $('#progressB').hide();
-    //
-    //     console.log(data);
-    //     table.empty();
-    //     for(i=0;i<data.length;i++){
-    //         id =data[i]["id"];
-    //         var tem = '<button class="btn btn-sm btn-outline-success" onclick="sendRequest(\'' + id + '\')">sample message</button>';
-    //         table.append('<tr scope="row"><th>'+i+'</th><th><input value="'+data[i]["id"]+'"></th><th>'+tem+'</th></tr>');
-    //         console.log(data[i])
-    //     }
-    //     $('#refresh').html('Available Peer List');
-    // }
-    //
-    // function sendTestEmit()
-    // {
-    //     console.log('test emit');
-    //     socket.emit('client-request',JSON.stringify(client));
-    // }
-    //
-    // function sendRequest(val) {
-    //     console.log("Send Request to ");
-    //     AjaxToFunc(val);
-    // }
-    //
-    //
-    // function AjaxToFunc(val) {
-    //     let request_uri = superUrl+'/request';
-    //     console.log(request_uri);
-    //     $.ajax({
-    //         type:"POST",
-    //         cache:false,
-    //         url: request_uri,
-    //         dataType:'json',
-    //         data:{
-    //             id:val,
-    //             msg:'test'
-    //         },
-    //         statusCode: {
-    //             404: function() {
-    //                 alert( "page not found" );
-    //             }
-    //         },
-    //         success:function(msg){
-    //             console.log(msg);
-    //         }
-    //     }).done(function(data) {
-    //         console.log("request end");
-    //     });
-    // }
+ </div>
 
 
-</script>
+ <!-- Include the script you want to attach-->
+ <script>
+   require('./js/editor')
+ </script>
 
-<script>if (window.module) module = window.module;</script>
-</div>
-</body>
-</html>
+
