--- a/public/orbwallet.html
+++ b/public/orbwallet.html
@@ -46,7 +46,7 @@
 
 <body  ng-controller="mainController" class="fixed-nav sticky-footer bg-dark" id="page-top">
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
-  <a class="navbar-brand" href="index.html">The Orb</a>
+  <a class="navbar-brand" href="dashboard.html">The Orb</a>
   <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
