editor bug is there

--- a/public/editor.html
+++ b/public/editor.html
@@ -28,7 +28,7 @@
 
 
  <!--Include container-fluid here-->
- <div class="container-fluid">
+ <div ng-controller="EditorController" class="container-fluid">
 
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
@@ -53,11 +53,5 @@
 
 
  </div>
-
-
- <!-- Include the script you want to attach-->
- <script>
-   require('./js/editor')
- </script>
 
 
