editor bug is there

--- a/public/editor.html
+++ b/public/editor.html
@@ -43,15 +43,14 @@
       <div id="main" class="col-12">
         <div class="col-md-12" id="code"></div>
         <div class="col-md-8">
-          <button style="margin: 10px" class="btn btn-success" id="save" onclick=""><i class="fa fa-save"></i> Done Editing</button>
+          <button style="margin: 10px" class="btn btn-success" id="save" onclick=""><i class="fa fa-save"></i>{{x}} Done Editing</button>
           <button style="margin: 10px" class="btn btn-danger" id="obfuscate"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
           <button style="margin: 10px" class="btn btn-danger" id="runcode"><i class="fa fa-send"></i> Run</button>
           <button style="margin: 10px" class="btn btn-primary" id="deploy"><i class="fa fa-send"></i> Deploy</button>
+          <button style="margin: 10px" class="btn btn-primary" id="test"><i class="fa fa-send"></i> Test</button>
         </div>
       </div>
     </div>
 
 
  </div>
-
-
