--- a/public/index.html
+++ b/public/index.html
@@ -18,12 +18,7 @@
   <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-route.min.js"></script>
-
-
-
-
-
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark"   id="page-top" ng-app="orb">
@@ -261,6 +256,7 @@
 <script>require('./script')</script>
 <script>require('./controllers/main.controller')</script>
 <script>require('./controllers/editor.controller')</script>
+<script>require('./controllers/payments.controller')</script>
 
 <script>if (window.module) module = window.module;</script>
 </div>
