--- a/public/orbwallet.html
+++ b/public/orbwallet.html
@@ -25,7 +25,7 @@
     }
   </style>
 
-  <div class="container-fluid">
+  <div ng-controller="PaymentController" class="container-fluid">
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
       <li class="breadcrumb-item">
@@ -57,9 +57,3 @@
       <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
     </div>
   </div>
-
-
-  <!-- Include the script you want to attach-->
-  <script>
-      require('./js/wallet')
-  </script>
