calling and posting function

--- a/public/editor.html
+++ b/public/editor.html
@@ -43,11 +43,11 @@
       <div id="main" class="col-12">
         <div class="col-md-12" id="code"></div>
         <div class="col-md-8">
-          <button style="margin: 10px" class="btn btn-success" id="save" onclick=""><i class="fa fa-save"></i>{{x}} Done Editing</button>
+          <button style="margin: 10px" class="btn btn-success" id="save" onclick=""><i class="fa fa-save"></i>{{test}} Done Editing</button>
           <button style="margin: 10px" class="btn btn-danger" id="obfuscate"><i class="fa fa-file-zip-o"></i> Obfuscate</button>
           <button style="margin: 10px" class="btn btn-danger" id="runcode"><i class="fa fa-send"></i> Run</button>
-          <button style="margin: 10px" class="btn btn-primary" id="deploy"><i class="fa fa-send"></i> Deploy</button>
-          <button style="margin: 10px" class="btn btn-primary" id="test"><i class="fa fa-send"></i> Test</button>
+          <button style="margin: 10px" class="btn btn-primary" id="deploy" ng-click="postFunction()"><i class="fa fa-send"></i> Deploy</button>
+          <button style="margin: 10px" class="btn btn-primary" ng-click="callFunction()" id="call"><i class="fa fa-send"></i> Call</button>
         </div>
       </div>
     </div>
