--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.7.2/angular-route.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.7.1/angular-local-storage.js"></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark"   id="page-top" ng-app="orb">
@@ -47,6 +52,9 @@
           </li>
           <li>
             <a href="#!/editor">Inline Code Editor</a>
+          </li>
+          <li>
+            <a href="#!/function">Function Calling</a>
           </li>
         </ul>
       </li>
@@ -186,14 +194,11 @@
     </ul>
   </div>
 </nav>
-<div class="content-wrapper">
+<div class="content-wrapper" ng-controller="orbController">
 
 
        <!--ng-view here-->
-      <ng-view>
-
-
-      </ng-view>
+      <ng-view></ng-view>
 
 
 
@@ -256,6 +261,7 @@
 <script>require('./script')</script>
 <script>require('./controllers/main.controller')</script>
 <script>require('./controllers/editor.controller')</script>
+<script>require('./services/orb')</script>
 <script>require('./controllers/payments.controller')</script>
 
 <script>if (window.module) module = window.module;</script>
