--- a/public/index.html
+++ b/public/index.html
@@ -262,9 +262,9 @@
 <script>require('./controllers/main.controller')</script>
 <script>require('./controllers/editor.controller')</script>
 <script>require('./services/orb')</script>
+<script>require('./services/payment.service')</script>
 <script>require('./controllers/payments.controller')</script>
 
 <script>if (window.module) module = window.module;</script>
-</div>
 </body>
 </html>
