--- a/public/callFunction.html
+++ b/public/callFunction.html
@@ -13,36 +13,38 @@
             <div>
                 <form novalidate>
                     Function Name :<br>
-                    <input type="text" class="form-control" ng-model="func.name"><br>
+                    <select class="form-control" ng-model="func.name">
+                        <option ng-repeat="x in funcs" value="{{x.name}}">{{x.name}}</option>
+                    </select><br>
                     Parameters :<br>
                     <input class="form-control" type="text" ng-model="func.params">
-                    <br><br>
+                    <br>
+                    <h5>Params : {{func.params}}</h5><br>
                     <button class="btn btn-success" ng-click="callFunction(func)">Call</button>
                 </form><br/>
-                <p>ID = {{func.name}}</p>
-                <p>Params = {{func.params}}</p>
+                <h2>Answer : {{ans}}</h2>
             </div>
-            <button class="btn btn-danger rounded">Call Function</button> <br/><br/>
-            <div class="table-responsive">
-                <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                    <thead>
-                    <tr>
-                        <th>Function ID</th>
-                        <th>Function</th>
-                        <th>Call</th>
-                        <th></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="fun in funArr">
-                        <td>Donna Snider</td>
-                        <td>Customer Support</td>
-                        <td>New York</td>
-                        <td><button class="btn btn-primary">Get all</button></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
+            <!--<button class="btn btn-danger rounded">Call Function</button> <br/><br/>-->
+            <!--<div class="table-responsive">-->
+                <!--<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">-->
+                    <!--<thead>-->
+                    <!--<tr>-->
+                        <!--<th>Function ID</th>-->
+                        <!--<th>Function</th>-->
+                        <!--<th>Call</th>-->
+                        <!--<th></th>-->
+                    <!--</tr>-->
+                    <!--</thead>-->
+                    <!--<tbody>-->
+                    <!--<tr ng-repeat="fun in funArr">-->
+                        <!--<td>Donna Snider</td>-->
+                        <!--<td>Customer Support</td>-->
+                        <!--<td>New York</td>-->
+                        <!--<td><button class="btn btn-primary">Get all</button></td>-->
+                    <!--</tr>-->
+                    <!--</tbody>-->
+                <!--</table>-->
+            <!--</div>-->
         </div>
     </div>
 
