--- a/public/index.html
+++ b/public/index.html
@@ -259,7 +259,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 
 <script>require('./script')</script>
-<script>require('./controllers/main.controller')</script>
+<script>require('./controllers/orb.controller')</script>
 <script>require('./controllers/editor.controller')</script>
 <script>require('./services/orb')</script>
 <script>require('./services/payment.service')</script>
