--- a/public/callFunction.html
+++ b/public/callFunction.html
@@ -1,5 +1,5 @@
 <!--Include container-fluid here-->
-<div     class="container-fluid" ng-controller="EditorController" >
+<div class="container-fluid" ng-controller="EditorController" >
     <!-- Breadcrumbs-->
     <ol class="breadcrumb">
         <li class="breadcrumb-item">
@@ -13,40 +13,39 @@
             <div>
                 <form novalidate>
                     Function Name :<br>
-                    <select class="form-control" ng-model="func.name">
-                        <option ng-repeat="x in funcs" value="{{x.name}}">{{x.name}}</option>
+                    <select class="form-control" ng-click="populate()" ng-model="func.name">
+                        <option ng-repeat="x in funcs" value="{{x}}">{{x}}</option>
                     </select><br>
+
+                    <!--<li ng-repeat="country in funcs">-->
+                        <!--{{country.name}} has population-->
+                    <!--</li>-->
+                    <!--<select class="form-control" ng-model="func.name">-->
+                        <!--<option value="addAll">addAll</option>-->
+                        <!--<option value="sentiment">Sentiment - Machine Learning Function</option>-->
+                        <!--<option value="fibonacci">Fibonacci - Calculate numbers in a fibonacci series</option>-->
+                    <!--</select>-->
                     Parameters :<br>
                     <input class="form-control" type="text" ng-model="func.params">
+                    <a href="">Accept JSON as a Parameter</a><br>
+
+                    <!--<div id='editor_holder'></div>-->
+                    <!--<button id='submit'></button><br><br>-->
+
+
                     <br>
                     <h5>Params : {{func.params}}</h5><br>
                     <button class="btn btn-success" ng-click="callFunction(func)">Call</button>
                 </form><br/>
                 <h2>Answer : {{ans}}</h2>
             </div>
-            <!--<button class="btn btn-danger rounded">Call Function</button> <br/><br/>-->
-            <!--<div class="table-responsive">-->
-                <!--<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">-->
-                    <!--<thead>-->
-                    <!--<tr>-->
-                        <!--<th>Function ID</th>-->
-                        <!--<th>Function</th>-->
-                        <!--<th>Call</th>-->
-                        <!--<th></th>-->
-                    <!--</tr>-->
-                    <!--</thead>-->
-                    <!--<tbody>-->
-                    <!--<tr ng-repeat="fun in funArr">-->
-                        <!--<td>Donna Snider</td>-->
-                        <!--<td>Customer Support</td>-->
-                        <!--<td>New York</td>-->
-                        <!--<td><button class="btn btn-primary">Get all</button></td>-->
-                    <!--</tr>-->
-                    <!--</tbody>-->
-                <!--</table>-->
-            <!--</div>-->
         </div>
     </div>
 
 
 </div>
+
+<script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+
+
+
