--- a/public/wallet_dashboard.html
+++ b/public/wallet_dashboard.html
@@ -153,7 +153,7 @@
                         <!--<div class="price-card">-->
                             <div class="price-card-head">
                                 <p class="pg-name"><span>Coins Paid</span><br/></p>
-                                <p class="pg-price">30 <i class="fa fa-dollar-sign"></i></p>
+                                <p class="pg-price">{{coinspaid}} <i class="fa fa-dollar-sign"></i></p>
                             </div>
                         <!--</div>-->
                     </div>
