--- a/public/editor.html
+++ b/public/editor.html
@@ -20,9 +20,10 @@
 
     .CodeFlask__textarea {
     }
-    .codeflask__flatten {
-      white-space: normal;
-    }
+
+    /*.codeflask__flatten {*/
+      /*white-space: normal;*/
+    /*}*/
 
   </style>
 
