--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
         </a>
         <ul class="sidenav-second-level collapse" id="collapseExamplePages">
           <li>
-            <a href="#!/wallet">Payments</a>
+            <a href="#!/fstore">Stored Functions</a>
           </li>
           <li>
             <a href="#!/wdash">Wallet Dashboard</a>
@@ -249,10 +249,11 @@
 <script>require('./script')</script>
 <script>require('./controllers/orb.controller')</script>
 <script>require('./controllers/editor.controller')</script>
-<script>require('./controllers/payments.controller')</script>
+
 <script>require('./services/orb')</script>
 <script>require('./services/payment.service')</script>
 <script>require('./services/temp.service')</script>
+<script>require('./controllers/payments.controller')</script>
 
 <script>
     $(function() {
