JSON input model - Parameter input

--- a/public/callFunction.html
+++ b/public/callFunction.html
@@ -20,10 +20,11 @@
 
                     Parameters :<br>
                     <input class="form-control" type="text" ng-model="func.params">
-                    <a href="">Accept JSON as a Parameter</a><br>
+                    <a href="" ng-click="JSONpopupInput()">Accept JSON as a Parameter</a><br>
                     <br>
 
                     <h5>Params : {{func.params}}</h5><br>
+                    <button class="btn btn-danger" id="checkCondition" ng-click="callFunction(func)">Check</button>
                     <button class="btn btn-success" ng-click="callFunction(func)">Call</button>
                 </form><br/>
 
